# TC74

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml  ctest.yml
Examples/STM32/: CMakeLists.txt
Examples/STM32/Inc/: TC74_I2C.hpp
Examples/STM32/Src/: TC74_I2C.cpp
Inc/: TC74.hpp
Src/: TC74.cpp
Test/: TC74.test.cpp
